# dumpa

./: .gitignore  LICENSE.md  PHASE-1-DESIGN.md  PHASE-1-REQUIREMENTS.md  README.md  ROADMAP.md  dumpa.toml.example  pyproject.toml  xapktoapk.py
claudedocs/: workflow_native_r2.md  workflow_phase4_cocos_godot.md  workflow_phase4_unity_jadx.md  workflow_unity_asset_parser.md  workflow_xref.md
docs/: architecture.md  design-closeout-sweep.md  design-dumpcs-patterns.md  design-phase4-unity-jadx.md  design-rewrite.md  manifest-parser-design.md  unity-asset-parser-design.md
docs/design/: xref.md
src/dumpa/: __init__.py  __main__.py  cli.py  reporting.py  signing.py
src/dumpa/commands/: analyze.py  base.py  clean.py  convert.py  decompile.py  diff.py  doctor.py  dump_il2cpp.py  export.py  info.py  load.py  repack.py  rewrite.py  rules.py  scan.py  scan_native.py  unpack.py  update_signatures.py  xref.py
src/dumpa/convert/: apktool_config.py  build.py  classify.py  manifest.py  merge.py  models.py  pipeline.py  validate.py
src/dumpa/core/: abi.py  apkid.py  archive.py  arsc.py  asn.py  axml.py  cache.py  config.py  cppname.py  datasafety.py  dex.py  diff.py  domains.py  dumpcs_methods.py  elf.py  endpoints.py  env.py  errors.py  evidence_bundle.py  exodus.py  fs.py  gametype.py  gdc.py  hashing.py  iostore.py  jni.py  logging.py  manifest.py  pck.py  playstore.py  privacy.py  privacy_compare.py  process.py  protobuf.py  r2.py  report.py  respool.py  rewrite.py  rules.py  tools.py  (+7 more)
src/dumpa/data/: __init__.py  datasafety_map.toml  domains.toml  endpoints.toml  gametype_map.toml
src/dumpa/rules/: __init__.py  dumpcs_anticheat.toml  dumpcs_general.toml  dumpcs_match3.toml  dumpcs_obfuscation.toml  dumpcs_rpg.toml  dumpcs_strategy.toml  engines.toml  manifest.toml  mediation.toml  native_symbols.toml  privacy.toml  protections.toml  protections_apkid.toml  secrets.toml  trackers.toml  trackers_exodus.toml  trackers_trackercontrol.toml  unity.toml
src/dumpa/scanners/: __init__.py  cocos.py  dex.py  dumpcs.py  endpoint.py  engine.py  gametype.py  godot.py  manifest_privacy.py  mediation.py  native.py  native_r2.py  native_symbols.py  privacy.py  protection.py  protobuf.py  resources.py  secret.py  tracker.py  unity.py  unity_assets.py  unity_rules.py  unreal.py
src/dumpa/tools/: aapt.py  apksigner.py  apktool.py  zipalign.py
src/dumpa/tools/il2cpp/: __init__.py  dumper.py  inspector.py
tests/: _arsc_build.py  _axml_build.py  _dex_build.py  _elf_build.py  _gdc_build.py  _golden.py  _iostore_build.py  _pck_build.py  _unrealpak_build.py  _xxtea_build.py  conftest.py  test_aapt_parse.py  test_abi.py  test_ad_enrichment.py  test_analyze_cmd.py  test_apkid_import.py  test_apksigner_parse.py  test_arsc.py  test_asn.py  test_axml.py  test_cache.py  test_cocos.py  test_convert_workspace.py  test_cppname.py  test_datasafety_parse.py  test_decompile.py  test_dex.py  test_dex_scanner.py  test_doctor.py  test_domains.py  test_domains_bundle.py  test_dump_il2cpp.py  test_dumpcs_methods.py  test_dumpcs_patterns.py  test_elf.py  test_endpoint.py  test_endpoints.py  test_engine_probe.py  test_evidence_bundle.py  test_exodus_import.py  (+52 more)
tests/golden/: com.mobilegame.wordsearch.apk.json  com.shatteredpixel.shatteredpixeldungeon.xapk.json  com.smilerlee.klondike.apk.json  com.unciv.app.xapk.json  com.watabou.pixeldungeon.apk.json  io.anuke.mindustry.apk.json  org.godotengine.ceiStudiosRamMandirGame.apk.json
