[project]
name = "dumpa"
version = "0.1.0"
description = "Unity/Android reverse-engineering toolkit (xapk->apk conversion, il2cpp dumping, and more)."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
# radare2 region scanning uses the external `radare2`/`r2` binary via the tool registry.
radare2 = []
# Unity serialized-asset parsing (`.assets` / UnityFS AssetBundles -> TextAsset/MonoBehaviour
# strings) is backed by UnityPy. Optional: absent -> the unity_assets scanner warns + skips.
unity = ["UnityPy>=1.20"]
# Unreal pak/IoStore decryption: AES-256 (cryptography) for encrypted entries/indexes and LZ4
# blocks (lz4). Optional: absent -> the unreal scanner detects-and-defers encrypted/LZ4 content
# (Oodle has no open decompressor and stays deferred regardless).
unreal = ["cryptography>=42", "lz4>=4.0"]

[project.scripts]
dumpa = "dumpa.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/dumpa"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "C4",   # comprehensions
    "PTH",  # use pathlib
    "RET",  # return statements
    "RUF",  # ruff-specific
    "BLE",  # blind except
    "DTZ",  # datetime tz-awareness
]
ignore = [
    "E501",  # line length handled by formatter, not linter
    "B008",  # function call in default argument (Typer uses this pattern)
]

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
